# cli-tools

./: .gitignore  LICENSE  README.md
awk/: Cargo.toml  README.md  grammar.md
awk/src/: lexer.rs  main.rs  syntax_tree.rs  tokens.rs
awk/src/snapshots/: awk__lexer__sample_1.snap  awk__lexer__sample_2.snap  awk__lexer__sample_3.snap  awk__lexer__sample_4.snap  awk__lexer__sample_5.snap
awk/tests/: sample_1.awk  sample_2.awk  sample_3.awk  sample_4.awk  sample_5.awk
awk/tests/mocks/: sample_4.awk
find/: Cargo.toml  README.md  specs.md
find/src/: find.rs  main.rs  meta.rs
ls/: README.md  dune-project  ls.opam
ls/lib/: dune
ls/test/: dune
mkdir/: Cargo.toml  README.md  specs.md
mkdir/src/: main.rs
rm/: Cargo.toml  README.md
rm/src/: main.rs  meta.rs  rm.rs
twap/: Cargo.toml  README.md
twap/src/: main.rs
