(lang dune 3.13)

(name ls)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ls)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends (ocaml(="5.1.1")) dune (ppx_deriving(="5.2.1")))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
