[package]
name = "twap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["default", "event-stream"]}
futures = "0.3.30"
futures-timer = "3.0.3"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
sysinfo = "0.30.12"
tokio = { version = "1.3.8", features = ["full"]}
